# zero2prod

./: .dockerignore  Cargo.toml  Dockerfile  README.md  spec.yaml
.cargo/: config.toml
.github/workflows/: audit.yml  general.yml  test_lint.yml
configuration/: base.yaml  production.yaml
migrations/: 20231004180141_create_subscriptions_table.sql
scripts/: init_db.sh
src/: configuration.rs  consts.rs  domain.rs  email_client.rs  lib.rs  main.rs  startup.rs  telemetry.rs
src/domain/: new_subscriber.rs  subscriber_email.rs  subscriber_name.rs
src/routes/: health_check.rs  subscriptions.rs
tests/: health_check.rs
