[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"
authors = ["Ivan Lazarević"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dependencies]
actix-web = "4"
config = "0.13"
serde = { version = "1.0", features = ["derive"] }
sqlx = { version = "0.7", default-features = false, features = ["runtime-tokio-rustls", "macros", "postgres", "uuid", "chrono", "migrate"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

# `[dev-dependencies]` are used exclusively when running tests or examples.
# They are not included in the final application binary.
[dev-dependencies]
reqwest = "0.11"
rstest = "0.18.2"
