[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"
authors = ["Ivan Lazarević"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dependencies]
actix-web = "4"
chrono = { version = "0.4.22", default-features = false, features = ["clock"] }
config = { version = "0.13", default-features = false, features = ["yaml"] }
serde = { version = "1.0", features = ["derive"] }
sqlx = { version = "0.7", default-features = false, features = ["runtime-tokio-rustls", "macros", "postgres", "uuid", "chrono", "migrate"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tracing = { version = "0.1", features = ["log"]}
tracing-bunyan-formatter = "0.3"
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
tracing-log = "0.1"
uuid = { version = "1", features = ["v4"] }

# `[dev-dependencies]` are used exclusively when running tests or examples.
# They are not included in the final application binary.
[dev-dependencies]
reqwest = { version = "0.11", features = ["json"] }
rstest = "0.18.2"
